# glasshouse

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
api/: README.md
docs/adr/: 0001-python-rust-boundary.md
forecast/: README.md
frontend/: README.md
infra/: README.md
ingestion/: pyproject.toml
ingestion/glasshouse_ingestion/: __init__.py  cli.py  elexon_client.py  models.py  octopus_client.py  storage.py
ingestion/scripts/: mock_server.py  verify_live_schema.py
ingestion/tests/: conftest.py  test_elexon_client.py  test_octopus_client.py  test_storage.py
ingestion/tests/fixtures/: elexon_fuel_hh.json  elexon_system_prices.json  octopus_rates.json
settlement-engine/: Cargo.toml  pyproject.toml
settlement-engine/python/: README.md  test_bridge.py
settlement-engine/src/: lib.rs
