[project]
name = "glasshouse-ingestion"
version = "0.1.0"
description = "Pulls public GB electricity market data (Elexon, Octopus) into Glasshouse's time-series store."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
glasshouse-ingest = "glasshouse_ingestion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glasshouse_ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
