[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "glasshouse-settlement"
version = "0.1.0"
description = "Rust settlement/allocation engine for Glasshouse, exposed to Python via PyO3."
requires-python = ">=3.11"

[tool.maturin]
# This is the one line that turns "cargo test" (pure Rust) into
# "python -c 'import glasshouse_settlement'" (a real Python C extension).
features = ["python-ext"]
module-name = "glasshouse_settlement"
